src/acts/ddl/ddlParser.cpp
// precompiled header
#include <includes.hpp>


// Generated from .\grammar\ddl.g4 by ANTLR 4.13.0


#include "ddlVisitor.h"

#include "ddlParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DdlParserStaticData final {
  DdlParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DdlParserStaticData(const DdlParserStaticData&) = delete;
  DdlParserStaticData(DdlParserStaticData&&) = delete;
  DdlParserStaticData& operator=(const DdlParserStaticData&) = delete;
  DdlParserStaticData& operator=(DdlParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ddlParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
DdlParserStaticData *ddlParserStaticData = nullptr;

void ddlParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ddlParserStaticData != nullptr) {
    return;
  }
#else
  assert(ddlParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DdlParserStaticData>(
    std::vector<std::string>{
      "prog", "data", "enum", "struct", "struct_def", "number"
    },
    std::vector<std::string>{
      "", "';'", "'enum'", "'{'", "'='", "','", "'}'", "'struct'", "'['", 
      "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "NEWLINE", "WHITESPACE", "INTEGER10", 
      "INTEGER16", "INTEGER8", "INTEGER2", "IDENTIFIER", "PATH", "STRING"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ddlParserStaticData = staticData.release();
}

}

ddlParser::ddlParser(TokenStream *input) : ddlParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ddlParser::ddlParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ddlParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ddlParserStaticData->atn, ddlParserStaticData->decisionToDFA, ddlParserStaticData->sharedContextCache, options);
}

ddlParser::~ddlParser() {
  delete _interpreter;
}

const atn::ATN& ddlParser::getATN() const {
  return *ddlParserStaticData->atn;
}

std::string ddlParser::getGrammarFileName() const {
  return "ddl.g4";
}

const std::vector<std::string>& ddlParser::getRuleNames() const {
  return ddlParserStaticData->ruleNames;
}

const dfa::Vocabulary& ddlParser::getVocabulary() const {
  return ddlParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ddlParser::getSerializedATN() const {
  return ddlParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

ddlParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ddlParser::ProgContext::EOF() {
  return getToken(ddlParser::EOF, 0);
}

std::vector<ddlParser::DataContext *> ddlParser::ProgContext::data() {
  return getRuleContexts<ddlParser::DataContext>();
}

ddlParser::DataContext* ddlParser::ProgContext::data(size_t i) {
  return getRuleContext<ddlParser::DataContext>(i);
}

std::vector<ddlParser::StructContext *> ddlParser::ProgContext::struct_() {
  return getRuleContexts<ddlParser::StructContext>();
}

ddlParser::StructContext* ddlParser::ProgContext::struct_(size_t i) {
  return getRuleContext<ddlParser::StructContext>(i);
}

std::vector<ddlParser::EnumContext *> ddlParser::ProgContext::enum_() {
  return getRuleContexts<ddlParser::EnumContext>();
}

ddlParser::EnumContext* ddlParser::ProgContext::enum_(size_t i) {
  return getRuleContext<ddlParser::EnumContext>(i);
}


size_t ddlParser::ProgContext::getRuleIndex() const {
  return ddlParser::RuleProg;
}


std::any ddlParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ddlVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ddlParser::ProgContext* ddlParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ddlParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(21);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 65668) != 0)) {
      setState(15);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ddlParser::IDENTIFIER: {
          setState(12);
          data();
          break;
        }

        case ddlParser::T__6: {
          setState(13);
          struct_();
          break;
        }

        case ddlParser::T__1: {
          setState(14);
          enum_();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(17);
      match(ddlParser::T__0);
      setState(23);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(24);
    match(ddlParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DataContext ------------------------------------------------------------------

ddlParser::DataContext::DataContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ddlParser::DataContext::IDENTIFIER() {
  return getToken(ddlParser::IDENTIFIER, 0);
}

tree::TerminalNode* ddlParser::DataContext::STRING() {
  return getToken(ddlParser::STRING, 0);
}

ddlParser::NumberContext* ddlParser::DataContext::number() {
  return getRuleContext<ddlParser::NumberContext>(0);
}


size_t ddlParser::DataContext::getRuleIndex() const {
  return ddlParser::RuleData;
}


std::any ddlParser::DataContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ddlVisitor*>(visitor))
    return parserVisitor->visitData(this);
  else
    return visitor->visitChildren(this);
}

ddlParser::DataContext* ddlParser::data() {
  DataContext *_localctx = _tracker.createInstance<DataContext>(_ctx, getState());
  enterRule(_localctx, 2, ddlParser::RuleData);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    match(ddlParser::IDENTIFIER);
    setState(29);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ddlParser::STRING: {
        setState(27);
        match(ddlParser::STRING);
        break;
      }

      case ddlParser::INTEGER10:
      case ddlParser::INTEGER16:
      case ddlParser::INTEGER8:
      case ddlParser::INTEGER2: {
        setState(28);
        number();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumContext ------------------------------------------------------------------

ddlParser::EnumContext::EnumContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ddlParser::EnumContext::IDENTIFIER() {
  return getToken(ddlParser::IDENTIFIER, 0);
}

std::vector<tree::TerminalNode *> ddlParser::EnumContext::STRING() {
  return getTokens(ddlParser::STRING);
}

tree::TerminalNode* ddlParser::EnumContext::STRING(size_t i) {
  return getToken(ddlParser::STRING, i);
}

std::vector<ddlParser::NumberContext *> ddlParser::EnumContext::number() {
  return getRuleContexts<ddlParser::NumberContext>();
}

ddlParser::NumberContext* ddlParser::EnumContext::number(size_t i) {
  return getRuleContext<ddlParser::NumberContext>(i);
}


size_t ddlParser::EnumContext::getRuleIndex() const {
  return ddlParser::RuleEnum;
}


std::any ddlParser::EnumContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ddlVisitor*>(visitor))
    return parserVisitor->visitEnum(this);
  else
    return visitor->visitChildren(this);
}

ddlParser::EnumContext* ddlParser::enum_() {
  EnumContext *_localctx = _tracker.createInstance<EnumContext>(_ctx, getState());
  enterRule(_localctx, 4, ddlParser::RuleEnum);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    match(ddlParser::T__1);
    setState(32);
    match(ddlParser::IDENTIFIER);
    setState(33);
    match(ddlParser::T__2);
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ddlParser::STRING) {
      setState(34);
      match(ddlParser::STRING);
      setState(37);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ddlParser::T__3) {
        setState(35);
        match(ddlParser::T__3);
        setState(36);
        number();
      }
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ddlParser::T__4) {
        setState(39);
        match(ddlParser::T__4);
        setState(40);
        match(ddlParser::STRING);
        setState(43);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ddlParser::T__3) {
          setState(41);
          match(ddlParser::T__3);
          setState(42);
          number();
        }
        setState(49);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(52);
    match(ddlParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructContext ------------------------------------------------------------------

ddlParser::StructContext::StructContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ddlParser::StructContext::IDENTIFIER() {
  return getToken(ddlParser::IDENTIFIER, 0);
}

std::vector<ddlParser::Struct_defContext *> ddlParser::StructContext::struct_def() {
  return getRuleContexts<ddlParser::Struct_defContext>();
}

ddlParser::Struct_defContext* ddlParser::StructContext::struct_def(size_t i) {
  return getRuleContext<ddlParser::Struct_defContext>(i);
}


size_t ddlParser::StructContext::getRuleIndex() const {
  return ddlParser::RuleStruct;
}


std::any ddlParser::StructContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ddlVisitor*>(visitor))
    return parserVisitor->visitStruct(this);
  else
    return visitor->visitChildren(this);
}

ddlParser::StructContext* ddlParser::struct_() {
  StructContext *_localctx = _tracker.createInstance<StructContext>(_ctx, getState());
  enterRule(_localctx, 6, ddlParser::RuleStruct);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(ddlParser::T__6);
    setState(55);
    match(ddlParser::IDENTIFIER);
    setState(56);
    match(ddlParser::T__2);
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ddlParser::IDENTIFIER) {
      setState(57);
      struct_def();
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(63);
    match(ddlParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Struct_defContext ------------------------------------------------------------------

ddlParser::Struct_defContext::Struct_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ddlParser::Struct_defContext::IDENTIFIER() {
  return getTokens(ddlParser::IDENTIFIER);
}

tree::TerminalNode* ddlParser::Struct_defContext::IDENTIFIER(size_t i) {
  return getToken(ddlParser::IDENTIFIER, i);
}

std::vector<ddlParser::NumberContext *> ddlParser::Struct_defContext::number() {
  return getRuleContexts<ddlParser::NumberContext>();
}

ddlParser::NumberContext* ddlParser::Struct_defContext::number(size_t i) {
  return getRuleContext<ddlParser::NumberContext>(i);
}


size_t ddlParser::Struct_defContext::getRuleIndex() const {
  return ddlParser::RuleStruct_def;
}


std::any ddlParser::Struct_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ddlVisitor*>(visitor))
    return parserVisitor->visitStruct_def(this);
  else
    return visitor->visitChildren(this);
}

ddlParser::Struct_defContext* ddlParser::struct_def() {
  Struct_defContext *_localctx = _tracker.createInstance<Struct_defContext>(_ctx, getState());
  enterRule(_localctx, 8, ddlParser::RuleStruct_def);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(ddlParser::IDENTIFIER);
    setState(66);
    match(ddlParser::IDENTIFIER);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ddlParser::T__7) {
      setState(67);
      match(ddlParser::T__7);
      setState(68);
      number();
      setState(69);
      match(ddlParser::T__8);
      setState(74);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ddlParser::T__7) {
        setState(70);
        match(ddlParser::T__7);
        setState(71);
        number();
        setState(72);
        match(ddlParser::T__8);
      }
    }
    setState(78);
    match(ddlParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

ddlParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ddlParser::NumberContext::INTEGER10() {
  return getToken(ddlParser::INTEGER10, 0);
}

tree::TerminalNode* ddlParser::NumberContext::INTEGER16() {
  return getToken(ddlParser::INTEGER16, 0);
}

tree::TerminalNode* ddlParser::NumberContext::INTEGER8() {
  return getToken(ddlParser::INTEGER8, 0);
}

tree::TerminalNode* ddlParser::NumberContext::INTEGER2() {
  return getToken(ddlParser::INTEGER2, 0);
}


size_t ddlParser::NumberContext::getRuleIndex() const {
  return ddlParser::RuleNumber;
}


std::any ddlParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ddlVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}

ddlParser::NumberContext* ddlParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 10, ddlParser::RuleNumber);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 61440) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

void ddlParser::initialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  ddlParserInitialize();
#else
  ::antlr4::internal::call_once(ddlParserOnceFlag, ddlParserInitialize);
#endif
}
